Polishing.
Use Map.copyOf(…) instead of Collections.unmodifiableMap(new LinkedHashMap<>(…));

See #999